Moved card to left
Moved card to left

--- a/index.html
+++ b/index.html
@@ -10,18 +10,23 @@
 
 <body>
     <div class="bg">
-        <div class="card center-screen">
+        <div class="card leftSide">
             <img src="images/me.jpg" style="width:100%">
             <h1>Sohesh TS</h1>
-            <p class="title">Java Developer</p>
+            <p class="title">Software Engineer</p>
             <p>Coolminds Technologies</p>
             <div style="margin: 24px 0;">
-                <a href="mailto:soheshts@gmail.com"><i class="fa fa-envelope"></i></a>
-                <a href="https://github.com/soheshts"><i class="fa fa-github"></i></a>
-                <a href="https://twitter.com/soheshts"><i class="fa fa-twitter"></i></a>
-                <a href="https://www.linkedin.com/in/soheshts"><i class="fa fa-linkedin"></i></a>
+                <a href="mailto:soheshts@gmail.com"><i class="fa fa-envelope"></i> Email</a><br>
+                <a href="https://github.com/soheshts"><i class="fa fa-github"></i> Github</a><br>
+                <a href="https://twitter.com/soheshts"><i class="fa fa-twitter"></i> Twitter</a><br>
+                <a href="https://www.linkedin.com/in/soheshts"><i class="fa fa-linkedin"></i> Linkedin</a><br>
             </div>
             <p><button>Contact</button></p>
+        </div>
+        <div class="content" >
+            <h2>Hello there.</h2>
+            <p> I am a Java Developer with <b>4+ years</b> of experience.</p>
+            
         </div>
     </div>
 
