--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
             <p class="title">Software Engineer</p>
             <p>Coolminds Technologies</p>
             <div style="margin: 24px 0;">
-                <a href="mailto:soheshts@gmail.com"><i class="fa fa-envelope"></i> Email</a><br>
-                <a href="https://github.com/soheshts"><i class="fa fa-github"></i> Github</a><br>
-                <a href="https://twitter.com/soheshts"><i class="fa fa-twitter"></i> Twitter</a><br>
-                <a href="https://www.linkedin.com/in/soheshts"><i class="fa fa-linkedin"></i> Linkedin</a><br>
+                <a href="mailto:soheshts@gmail.com"><i class="fa fa-envelope"></i></a>
+                <a href="https://github.com/soheshts"><i class="fa fa-github"></i></a>
+                <a href="https://twitter.com/soheshts"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.linkedin.com/in/soheshts"><i class="fa fa-linkedin"></i></a>
             </div>
-            <p><button>Contact</button></p>
+<!--            <p><button>Contact</button></p>-->
         </div>
         <div class="content" >
             <h2>Hello there.</h2>
