--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             </div>
 <!--            <p><button>Contact</button></p>-->
         </div>
-        <div class="content" >
+        <div class="center-screen" >
             <h2>Hello there.</h2>
-            <p> I am a Java Developer with <b>4+ years</b> of experience.</p>
+            <p> Content Loading... <b>30%</b></p>
             
         </div>
     </div>
