--- a/index.html
+++ b/index.html
@@ -5,30 +5,48 @@
     <title>Sohesh TS</title>
     <link rel="icon" href="favicon.png">
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="css/uikit.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
     <div class="bg">
-        <div class="card leftSide">
-            <img src="images/me.jpg" style="width:100%">
-            <h1>Sohesh TS</h1>
-            <p class="title">Software Engineer</p>
-            <p>Coolminds Technologies</p>
-            <div style="margin: 24px 0;">
-                <a href="mailto:soheshts@gmail.com"><i class="fa fa-envelope"></i></a>
-                <a href="https://github.com/soheshts"><i class="fa fa-github"></i></a>
-                <a href="https://twitter.com/soheshts"><i class="fa fa-twitter"></i></a>
-                <a href="https://www.linkedin.com/in/soheshts"><i class="fa fa-linkedin"></i></a>
+        <div class="uk-float-left">
+            <div class="uk-card uk-card-default uk-box-shadow-large uk-position-medium uk-position-left ">
+                <div class="uk-card-media-top">
+                    <img src="images/me.jpg">
+                </div>
+                <div class="uk-card-body uk-padding-remove">
+                    <div class="uk-card-header uk-padding-small ">
+                        <h3 class="uk-card-title uk-text-center">Sohesh TS</h3>
+                    </div>
+                    <div class="uk-padding-small">
+                        <p class="uk-text-small uk-text-center ">Software Engineer</p>
+                        <p class="uk-text-small uk-text-center"><i class="fa fa-building" aria-hidden="true"></i> Coolminds Technologies</p>
+                        <p class="uk-text-small uk-text-center"><i class="fa fa-map-marker" aria-hidden="true"></i> Infopark, Kochi</p>
+<!--                        <p class="uk-text-small uk-text-center"><i class="fa fa-map-marker" aria-hidden="true"></i> Infopark, Kochi</p>-->
+                    </div>
+                    <div class="uk-card-footer uk-position-bottom-center">
+                        <a href="mailto:soheshts@gmail.com"><i class="fa fa-envelope"></i></a>
+                        <a href="https://github.com/soheshts"><i class="fa fa-github"></i></a>
+                        <a href="https://twitter.com/soheshts"><i class="fa fa-twitter"></i></a>
+                        <a href="https://www.linkedin.com/in/soheshts"><i class="fa fa-linkedin"></i></a>
+                    </div>
+
+                </div>
+
             </div>
-<!--            <p><button>Contact</button></p>-->
         </div>
-        <div class="center-screen" >
-            <h2>Hello there.</h2>
-            <p> Content Loading... <b>30%</b></p>
-            
+        <div class="content">
+            <div class="uk-text-large">
+                <p>Hello there.</p>
+            </div>
+            <div class="uk-section uk-section-muted">
+                <p> Content Loading... <b>40%</b></p>
+            </div>
         </div>
     </div>
 
-
+    <script src="js/uikit.min.js"></script>
+    <script src="js/uikit-icons.min.js"></script>
 </body></html>
