Added Skill sets

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="bg">
-        <div class="uk-float-left">
+        <div class="uk-float-left" style="float: left">
             <div class="uk-card uk-card-default uk-box-shadow-large uk-position-medium uk-position-left ">
                 <div class="uk-card-media-top">
                     <img src="images/me.jpg">
@@ -24,29 +24,70 @@
                         <p class="uk-text-small uk-text-center ">Software Engineer</p>
                         <p class="uk-text-small uk-text-center"><i class="fa fa-building" aria-hidden="true"></i> Coolminds Technologies</p>
                         <p class="uk-text-small uk-text-center"><i class="fa fa-map-marker" aria-hidden="true"></i> Infopark, Kochi</p>
-<!--                        <p class="uk-text-small uk-text-center"><i class="fa fa-map-marker" aria-hidden="true"></i> Infopark, Kochi</p>-->
-                    </div>
-                    <div class="uk-card-footer uk-position-bottom-center">
-                        <a href="mailto:soheshts@gmail.com"><i class="fa fa-envelope"></i></a>
-                        <a href="https://github.com/soheshts"><i class="fa fa-github"></i></a>
-                        <a href="https://twitter.com/soheshts"><i class="fa fa-twitter"></i></a>
-                        <a href="https://www.linkedin.com/in/soheshts"><i class="fa fa-linkedin"></i></a>
+                        <!--                        <p class="uk-text-small uk-text-center"><i class="fa fa-map-marker" aria-hidden="true"></i> Infopark, Kochi</p>-->
                     </div>
 
+
+                </div>
+                <div class="uk-card-footer uk-position-bottom-center">
+                    <a href="mailto:soheshts@gmail.com"><i class="fa fa-envelope"></i></a>
+                    <a href="https://github.com/soheshts"><i class="fa fa-github"></i></a>
+                    <a href="https://twitter.com/soheshts"><i class="fa fa-twitter"></i></a>
+                    <a href="https://www.linkedin.com/in/soheshts"><i class="fa fa-linkedin"></i></a>
                 </div>
 
             </div>
         </div>
         <div class="content">
-            <div class="uk-text-large">
-                <p>Hello there.</p>
+            <div class="uk-heading-small">
+                <h2>Hello there.</h2>
             </div>
-            <div class="uk-section uk-section-muted">
-                <p> Content Loading... <b>40%</b></p>
+            <div class="uk-text-small">
+                <p>I am a Java Developer. I've been working on cool projects for the past 4 years.</p>
+            </div>
+            <div>
+                <div class="uk-heading-small">
+                    <h4>My Skill sets.</h4>
+                </div>
+                <div class="uk-child-width-expand@s uk-text-center" uk-grid>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body">Spring</div>
+                    </div>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body">Spring Boot</div>
+                    </div>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body">Spring JPA</div>
+                    </div>
+                </div>
+                <div class="uk-child-width-expand@s uk-text-center" uk-grid>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body">Microervice</div>
+                    </div>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body">REST Service</div>
+                    </div>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body">MS SQL</div>
+                    </div>
+                </div>
+                <div class="uk-child-width-expand@s uk-text-center" uk-grid>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body">HTML</div>
+                    </div>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body">Javascript</div>
+                    </div>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body">JQuery</div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
     <script src="js/uikit.min.js"></script>
     <script src="js/uikit-icons.min.js"></script>
-</body></html>
+</body>
+
+</html>
