hover effect added

--- a/index.html
+++ b/index.html
@@ -51,35 +51,35 @@
                 </div>
                 <div class="uk-child-width-expand@s uk-text-center" uk-grid>
                     <div>
-                        <div class="uk-card uk-card-default uk-card-body">Spring</div>
+                        <div class="uk-card uk-card-hover uk-card-default uk-card-body">Spring</div>
                     </div>
                     <div>
-                        <div class="uk-card uk-card-default uk-card-body">Spring Boot</div>
+                        <div class="uk-card uk-card-hover  uk-card-default uk-card-body">Spring Boot</div>
                     </div>
                     <div>
-                        <div class="uk-card uk-card-default uk-card-body">Spring JPA</div>
-                    </div>
-                </div>
-                <div class="uk-child-width-expand@s uk-text-center" uk-grid>
-                    <div>
-                        <div class="uk-card uk-card-default uk-card-body">Microervice</div>
-                    </div>
-                    <div>
-                        <div class="uk-card uk-card-default uk-card-body">REST Service</div>
-                    </div>
-                    <div>
-                        <div class="uk-card uk-card-default uk-card-body">MS SQL</div>
+                        <div class="uk-card uk-card-hover  uk-card-default uk-card-body">Spring JPA</div>
                     </div>
                 </div>
                 <div class="uk-child-width-expand@s uk-text-center" uk-grid>
                     <div>
-                        <div class="uk-card uk-card-default uk-card-body">HTML</div>
+                        <div class="uk-card uk-card-hover  uk-card-default uk-card-body">Microervice</div>
                     </div>
                     <div>
-                        <div class="uk-card uk-card-default uk-card-body">Javascript</div>
+                        <div class="uk-card  uk-card-hover uk-card-default uk-card-body">REST Service</div>
                     </div>
                     <div>
-                        <div class="uk-card uk-card-default uk-card-body">JQuery</div>
+                        <div class="uk-card uk-card-hover  uk-card-default uk-card-body">MS SQL</div>
+                    </div>
+                </div>
+                <div class="uk-child-width-expand@s uk-text-center" uk-grid>
+                    <div>
+                        <div class="uk-card  uk-card-hover uk-card-default uk-card-body">HTML</div>
+                    </div>
+                    <div>
+                        <div class="uk-card  uk-card-hover uk-card-default uk-card-body">Javascript</div>
+                    </div>
+                    <div>
+                        <div class="uk-card uk-card-hover  uk-card-default uk-card-body">JQuery</div>
                     </div>
                 </div>
             </div>
