--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="uk-child-width-expand@s uk-text-center" uk-grid>
                     <div>
-                        <div class="uk-card uk-card-hover  uk-card-default uk-card-body">Microervice</div>
+                        <div class="uk-card uk-card-hover  uk-card-default uk-card-body">Microservice</div>
                     </div>
                     <div>
                         <div class="uk-card  uk-card-hover uk-card-default uk-card-body">REST Service</div>
