Changed company info

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     </div>
                     <div class="uk-padding-small">
                         <p class="uk-text-small uk-text-center ">Software Engineer</p>
-                        <p class="uk-text-small uk-text-center"><i class="fa fa-building" aria-hidden="true"></i> Coolminds Technologies</p>
-                        <p class="uk-text-small uk-text-center"><i class="fa fa-map-marker" aria-hidden="true"></i> Infopark, Kochi</p>
+                        <p class="uk-text-small uk-text-center"><i class="fa fa-building" aria-hidden="true"></i> Quest Global</p>
+                        <p class="uk-text-small uk-text-center"><i class="fa fa-map-marker" aria-hidden="true"></i> Technopark, Trivandrum</p>
                         <!--                        <p class="uk-text-small uk-text-center"><i class="fa fa-map-marker" aria-hidden="true"></i> Infopark, Kochi</p>-->
                     </div>
 
@@ -43,7 +43,7 @@
                 <h2>Hello there.</h2>
             </div>
             <div class="uk-text-small">
-                <p>I am a Java Developer. I've been working on cool projects for the past 4 years.</p>
+                <p>I am a Java Developer. I've been working on cool projects for the past 4.8 years.</p>
             </div>
             <div>
                 <div class="uk-heading-small">
