--- a/index.html
+++ b/index.html
@@ -1,93 +1,48 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <title>Sohesh TS</title>
-    <link rel="icon" href="favicon.png">
-    <link rel="stylesheet" href="css/custom.css">
-    <link rel="stylesheet" href="css/uikit.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!--
+    If you are serving your web app in a path other than the root, change the
+    href value below to reflect the base path you are serving from.
+
+    The path provided below has to start and end with a slash "/" in order for
+    it to work correctly.
+
+    Fore more details:
+    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+  -->
+  <base href="/">
+
+  <meta charset="UTF-8">
+  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+  <meta name="description" content="A new Flutter project.">
+
+  <!-- iOS meta tags & icons -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="me_app">
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png"/>
+
+  <title>me_app</title>
+  <link rel="manifest" href="manifest.json">
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-
 <body>
-    <div class="bg">
-        <div class="uk-float-left" style="float: left">
-            <div class="uk-card uk-card-default uk-box-shadow-large uk-position-medium uk-position-left ">
-                <div class="uk-card-media-top">
-                    <img src="images/me.jpg">
-                </div>
-                <div class="uk-card-body uk-padding-remove">
-                    <div class="uk-card-header uk-padding-small ">
-                        <h3 class="uk-card-title uk-text-center">Sohesh TS</h3>
-                    </div>
-                    <div class="uk-padding-small">
-                        <p class="uk-text-small uk-text-center ">Software Engineer</p>
-                        <p class="uk-text-small uk-text-center"><i class="fa fa-building" aria-hidden="true"></i> Quest Global</p>
-                        <p class="uk-text-small uk-text-center"><i class="fa fa-map-marker" aria-hidden="true"></i> Technopark, Trivandrum</p>
-                        <!--                        <p class="uk-text-small uk-text-center"><i class="fa fa-map-marker" aria-hidden="true"></i> Infopark, Kochi</p>-->
-                    </div>
-
-
-                </div>
-                <div class="uk-card-footer uk-position-bottom-center">
-                    <a href="mailto:soheshts@gmail.com"><i class="fa fa-envelope"></i></a>
-                    <a href="https://github.com/soheshts"><i class="fa fa-github"></i></a>
-                    <a href="https://twitter.com/soheshts"><i class="fa fa-twitter"></i></a>
-                    <a href="https://www.linkedin.com/in/soheshts"><i class="fa fa-linkedin"></i></a>
-                </div>
-
-            </div>
-        </div>
-        <div class="content">
-            <div class="uk-heading-small">
-                <h2>Hello there.</h2>
-            </div>
-            <div class="uk-text-small">
-                <p>I am a Java Developer. I've been working on cool projects for the past 4.8 years.</p>
-            </div>
-            <div>
-                <div class="uk-heading-small">
-                    <h4>My Skill sets.</h4>
-                </div>
-                <div class="uk-child-width-expand@s uk-text-center" uk-grid>
-                    <div>
-                        <div class="uk-card uk-card-hover uk-card-default uk-card-body">Spring</div>
-                    </div>
-                    <div>
-                        <div class="uk-card uk-card-hover  uk-card-default uk-card-body">Spring Boot</div>
-                    </div>
-                    <div>
-                        <div class="uk-card uk-card-hover  uk-card-default uk-card-body">Spring JPA</div>
-                    </div>
-                </div>
-                <div class="uk-child-width-expand@s uk-text-center" uk-grid>
-                    <div>
-                        <div class="uk-card uk-card-hover  uk-card-default uk-card-body">Microservice</div>
-                    </div>
-                    <div>
-                        <div class="uk-card  uk-card-hover uk-card-default uk-card-body">REST Service</div>
-                    </div>
-                    <div>
-                        <div class="uk-card uk-card-hover  uk-card-default uk-card-body">MS SQL</div>
-                    </div>
-                </div>
-                <div class="uk-child-width-expand@s uk-text-center" uk-grid>
-                    <div>
-                        <div class="uk-card  uk-card-hover uk-card-default uk-card-body">HTML</div>
-                    </div>
-                    <div>
-                        <div class="uk-card  uk-card-hover uk-card-default uk-card-body">Javascript</div>
-                    </div>
-                    <div>
-                        <div class="uk-card uk-card-hover  uk-card-default uk-card-body">JQuery</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <script src="js/uikit.min.js"></script>
-    <script src="js/uikit-icons.min.js"></script>
+  
+  <img class = "center" src="icons/Icon-192.png">
+  <!-- This script installs service_worker.js to provide PWA functionality to
+       application. For more information, see:
+       https://developers.google.com/web/fundamentals/primers/service-workers -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('flutter-first-frame', function () {
+        navigator.serviceWorker.register('flutter_service_worker.js?v=1155904575');
+      });
+    }
+  </script>
+  <script src="main.dart.js" type="application/javascript"></script>
 </body>
-
 </html>
