--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>me_app</title>
+  <title>Sohesh TS</title>
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
@@ -39,7 +39,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=1155904575');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=1107048730');
       });
     }
   </script>
