--- a/assets/assets/pages/test.html
+++ b/assets/assets/pages/test.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Blog Title</title>
 </head>
 <body>
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>Posts will be coming soon</h1>
+<p>I am working on it :) </p>
 </body>
 </html>
