--- a/assets/assets/pages/test.html
+++ b/assets/assets/pages/test.html
@@ -1,10 +1,109 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Blog</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+/* Add a gray background color with some padding */
+body {
+  font-family: Arial;
+  padding: 20px;
+  background: #f1f1f1;
+}
+
+/* Header/Blog Title */
+.header {
+  padding: 30px;
+  font-size: 40px;
+  text-align: center;
+  background: white;
+}
+
+/* Create two unequal columns that floats next to each other */
+/* Left column */
+.leftcolumn {   
+  float: left;
+  width: 75%;
+}
+
+/* Right column */
+.rightcolumn {
+  float: left;
+  width: 25%;
+  padding-left: 20px;
+}
+
+/* Fake image */
+.fakeimg {
+  background-color: #aaa;
+  width: 100%;
+  padding: 20px;
+}
+
+/* Add a card effect for articles */
+.card {
+   background-color: white;
+   padding: 20px;
+   margin-top: 20px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Footer */
+.footer {
+  padding: 20px;
+  text-align: center;
+  background: #ddd;
+  margin-top: 20px;
+}
+
+/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 800px) {
+  .leftcolumn, .rightcolumn {   
+    width: 100%;
+    padding: 0;
+  }
+}
+</style>
 </head>
 <body>
-<h1>This is a blog Heading</h1>
-<p>This is a paragraph.</p>
+
+
+<div class="row">
+  <div class="leftcolumn">
+    
+    <div class="card">
+      <h2>First Post</h2>
+      <h5>This is the first post, April 10, 2021</h5>
+      <div class="fakeimg" style="height:200px;">Image</div>
+      <p>Hello</p>
+      <p>Now here you go again, you say you want your freedom
+Well, who am I to keep you down?
+It's only right that you should play the way you feel it
+But listen carefully to the sound of your loneliness
+Like a heartbeat drives you mad
+In the stillness of remembering what you had
+And what you lost
+And what you had
+And what you lost
+Oh, thunder only happens when it's raining
+Players only love you when they're playing
+Say, women, they will come and they will go
+When the rain washes you clean, you'll know
+You'll know</p>
+    </div>
+  </div>
+  
+</div>
+
+
 </body>
 </html>
