--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/uikit.min.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" type="image/png" href="favicon.png"/>
     <script src="js/uikit.min.js"></script>
     <script src="js/uikit-icons.min.js"></script>
     <script src="js/uikit-icons.min.js"></script>
@@ -17,7 +18,7 @@
 <body>
     <div class="uk-container uk-position-center uk-animation-fade">
 
-        <div class="uk-height-medium ">
+        <div id="main" class="uk-height-medium ">
             <img class="uk-align-center uk-border-circle" data-src="images/me.jpg" width="100" height="100" alt=""
                 uk-img>
 
@@ -42,11 +43,67 @@
                     </a>
                 </div>
             </div>
+            <div class="uk-grid uk-flex uk-flex-center uk-padding-small">
+                <button class="uk-button uk-button-default" onclick="hideSkills()">HOME</button>
+                <button class="uk-button uk-button-default" onclick="hideMain()">SKILLS</button>
+            </div>
 
 
         </div>
+        <div id="skills" class="uk-height-medium uk-hidden">
+            <img class="uk-align-center uk-border-circle" data-src="images/me.jpg" width="100" height="100" alt=""
+                uk-img>
 
+            <h1 class=" uk-text-center uk-heading-small">
+                My skills
+            </h1>
+            <p class="uk-text-center uk-text-muted uk-text-large">Java | Spring Boot | Spring MVC</p>
+            <p class="uk-text-center uk-text-muted uk-text-large">Microservices | WebServices</p>
+            <p class="uk-text-center uk-text-muted uk-text-large">Docker | RabbitMQ | Spring JPA | MS SQL</p>
+            <p class="uk-text-center uk-text-muted uk-text-large">HTML | JavaScript | JQuery | AJAX</p>
+            <!-- <p class="uk-text-center uk-text-muted uk-text-large">JBOSS  | Tomcat</p> -->
+            <!-- <p class="uk-text-center uk-text-muted uk-text-large">Flutter</p>-->
+            <hr class="uk-divider-icon">
+            <!-- <div class="uk-grid uk-flex uk-flex-center">
+                <div><a class="uk-icon-button" href="mailto:soheshts@gmail.com"><span uk-icon="mail"></span></a>
+                </div>
+                <div><a class="uk-icon-button" href="https://www.linkedin.com/in/soheshts/"><span
+                            uk-icon="linkedin"></span></a></div>
+                <div><a class="uk-icon-button" href="https://github.com/soheshts"><span uk-icon="github"></span></a>
+                </div>
+                <div><a class="uk-icon-button" href="https://twitter.com/soheshts"><span uk-icon="twitter"></span></a>
+                </div>
+                <div>
+                    <a href="https://soshlism.blogspot.com/">
+                        <h1 class="uk-text-center uk-text-muted uk-text-large">Blog</h1>
+                    </a>
+                </div>
+            </div> -->
+            <div class="uk-grid uk-flex uk-flex-center uk-padding-small">
+                <button class="uk-button uk-button-default" onclick="hideSkills()">HOME</button>
+                <button class="uk-button uk-button-default" onclick="hideMain()">SKILLS</button>
+            </div>
+
+
+        </div>
     </div>
+    <script>
+        function hideSkills() {
+            console.log("hideSlikks");
+            var element = document.getElementById("skills");
+            element.classList.add("uk-hidden");
+            var element2 = document.getElementById("main");
+            element2.classList.remove("uk-hidden");
+        }
+        function hideMain() {
+            console.log("hidemain");
+
+            var element = document.getElementById("main");
+            element.classList.add("uk-hidden");
+            var element2 = document.getElementById("skills");
+            element2.classList.remove("uk-hidden");
+        }
+    </script>
 </body>
 
 </html>
