--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <!-- <script src="https://kit.fontawesome.com/cc8d569a53.js" crossorigin="anonymous"></script> -->
     <style>
-        
+        .body-background {
+            background-color: #222 !important;
+        }
     </style>
 </head>
 
-<body class="body">
+<body>
     <div class=" uk-position-cover uk-flexuk-width-expand uk-width-1-1 uk-height-1-1 toggle">
         <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
             <nav class="uk-navbar-container " uk-navbar>
@@ -29,7 +31,8 @@
                         <li onclick="showMain()"><a href="#">Home</a></li>
                         <li onclick="showSkills()"><a href="#">Skills</a></li>
                         <li onclick="showBlogList()"><a href="#">Blog</a></li>
-                        <li uk-toggle="target: .toggle; cls: uk-background-secondary uk-light;"><a href="#">Toggle</a>
+                        <li onclick="swapTheme()" uk-toggle="target: .toggle; cls: uk-background-secondary uk-light;"><a
+                                href="#">Toggle</a>
                         </li>
                     </ul>
 
@@ -105,7 +108,7 @@
                 console.log("blog list: " + JSON.stringify(bloglist));
                 var html = "";
                 $.each(bloglist, function (index, element) {
-                    html = html + ('<div onclick="viewPost(\'' + element.page + '\')" class="uk-card uk-card-hover uk-card-default toggle uk-margin-small uk-card-body uk-card-small "> <h3 class="">' + element.title + '</h3><p class="uk-article-meta">' + element.date + '</p></div>');
+                    html = html + ('<div onclick="viewPost(\'' + element.page + '\')" class="uk-card uk-card-hover uk-card-default card-toggle uk-margin-small uk-card-body uk-card-small "> <h3 class="">' + element.title + '</h3><p class="uk-article-meta">' + element.date + '</p></div>');
                 });
                 console.log(html);
                 $('#bloglist').html(html);
@@ -156,6 +159,16 @@
             $('#postDiv').addClass('uk-hidden');
             $('#blogPost').html('');
 
+        }
+        function swapTheme() {
+            if ($('html').hasClass('body-background'))
+                $('html').removeClass('body-background');
+            else
+                $('html').addClass('body-background');
+            if ($('.card-toggle').hasClass('uk-card-secondary'))
+                $('.card-toggle').removeClass('uk-card-secondary');
+            else
+                $('.card-toggle').addClass('uk-card-secondary');
         }
     </script>
 </body>
