--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <script src="js/uikit-icons.min.js"></script>
     <script src="js/uikit-icons.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/showdown@1.9.1/dist/showdown.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
     <script src="https://kit.fontawesome.com/cc8d569a53.js" crossorigin="anonymous"></script>
     <style>
         .body-background {
@@ -28,6 +27,7 @@
 
                 <div class="toggle uk-width-1-1 ">
                     <ul class="uk-navbar-nav">
+                        <li class="uk-navbar-item uk-logo"><img data-src="favicon.png" width="40" height="40" uk-img/></li>
                         <li onclick="showMain()"><a href="#">Home</a></li>
                         <li onclick="showSkills()"><a href="#">Skills</a></li>
                         <li onclick="showBlogList()"><a href="#">Blog</a></li>
