redirect to hugo blog

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <li class="uk-navbar-item uk-logo"><img data-src="favicon.png" width="40" height="40" uk-img/></li>
                         <li onclick="showMain()"><a href="#">Home</a></li>
                         <li onclick="showSkills()"><a href="#">Skills</a></li>
-                        <li onclick="showBlogList()"><a href="#">Blog</a></li>
+                        <li ><a href="https://soheshts.github.io/blog/">Blog</a></li>
                         <li onclick="swapTheme()" uk-toggle="target: .toggle; cls: uk-background-secondary uk-light;"><a
                                 href="#"><i id ="mode" class="fas fa-moon"></i></a>
                         </li>
