--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     My skills
                 </h1>
                 <p class="uk-text-center uk-text-muted uk-text-large">Java | Spring Boot | Spring MVC</p>
-                <p class="uk-text-center uk-text-muted uk-text-large">Microservices | WebServices</p>
+                <p class="uk-text-center uk-text-muted uk-text-large">Microservices | WebServices | Camel</p>
                 <p class="uk-text-center uk-text-muted uk-text-large">Docker | RabbitMQ | Spring JPA | MS SQL</p>
                 <p class="uk-text-center uk-text-muted uk-text-large">HTML | JavaScript | JQuery | AJAX</p>
 
