--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div><a class="uk-icon-button" href="https://github.com/soheshts"><span uk-icon="github"></span></a>
                     </div>
                     <div><a class="uk-icon-button" href="https://twitter.com/soheshts"><span
-                                uk-icon="twitter"></span></a>
+                                uk-icon="mastodon"></span></a>
                     </div>
                     <!-- <div>
                         <a href="https://soshlism.blogspot.com/">
