--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                 uk-icon="linkedin"></span></a></div>
                     <div><a class="uk-icon-button" href="https://github.com/soheshts"><span uk-icon="github"></span></a>
                     </div>
-                    <div><a class="uk-icon-button" href="https://twitter.com/soheshts"><span
+                    <div><a class="uk-icon-button" href="https://mastodon.social/@soheshts"><span
                                 uk-icon="mastodon"></span></a>
                     </div>
                     <!-- <div>
