--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </h1>
                 <p class="uk-text-center uk-text-muted uk-text-large">Java | Spring Boot | Spring MVC</p>
                 <p class="uk-text-center uk-text-muted uk-text-large">Microservices | WebServices | Camel</p>
-                <p class="uk-text-center uk-text-muted uk-text-large">Docker | RabbitMQ | Spring JPA | MS SQL</p>
+                <p class="uk-text-center uk-text-muted uk-text-large">Docker | Azure Servicebus | RabbitMQ | MongoDB</p>
                 <p class="uk-text-center uk-text-muted uk-text-large">HTML | JavaScript | JQuery | AJAX</p>
 
 
