--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     My skills
                 </h1>
                 <p class="uk-text-center uk-text-muted uk-text-large">Java | Spring Boot | Spring MVC</p>
-                <p class="uk-text-center uk-text-muted uk-text-large">Microservices | WebServices | Camel</p>
+                <p class="uk-text-center uk-text-muted uk-text-large">Microservices | WebServices | Apache Camel</p>
                 <p class="uk-text-center uk-text-muted uk-text-large">Docker | Azure Servicebus | RabbitMQ | MongoDB</p>
                 <p class="uk-text-center uk-text-muted uk-text-large">HTML | JavaScript | JQuery | AJAX</p>
 
